src/objects/PaymentDetail__c.object
<CustomObject>
    <fields>
        <fullName>AccountAcountRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計</label>
        <referenceTo>AccountAcount__c</referenceTo>
        <relationshipLabel>支払明細</relationshipLabel>
        <relationshipName>PaymentDetailAccountAcountRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DepositAmount__c</fullName>
        <label>預かり金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentInfoRef__c</fullName>
        <label>支払情報</label>
        <referenceTo>PaymentInfo__c</referenceTo>
        <relationshipLabel>支払明細</relationshipLabel>
        <relationshipName>PaymentDetailRef</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RemainingMoney__c</fullName>
        <formula>DepositAmount__c -  UsedAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>残金</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UsedAmount__c</fullName>
        <label>利用金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>支払明細</label>
    <nameField>
        <displayFormat>PD-{0000000000}</displayFormat>
        <label>明細番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>